# _64

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  build.rs  makefile
.docker/: Dockerfile
.github/workflows/: build.yml
_sys/: Cargo.toml  build.rs
_sys/src/: lib.rs
base_64/: Cargo.toml
base_64/src/: lib.rs
base_64/src/math/: mod.rs
base_64/src/mem/: mod.rs
base_64/src/mem/vec_64/: mod.rs
base_64/src/system/: mod.rs
crates/base_64/: Cargo.toml
crates/base_64/src/: lib.rs
crates/base_64/src/graph/: mod.rs
crates/base_64/src/mem/: mod.rs
crates/gfx_64/: Cargo.toml  bindings.h  build.rs
crates/gfx_64/src/: lib.rs
crates/gfx_64/src/resource/: mod.rs
crates/gfx_64/src/resource/buffer/: mod.rs
crates/gfx_64/src/resource/framebuffer/: mod.rs
crates/gfx_64/src/resource/mesh/: mod.rs  vertex.rs
crates/gfx_64/src/resource/pipeline/: mod.rs
crates/gfx_64/src/resource/program/: mod.rs
crates/gfx_64/src/resource/shader/: mod.rs
crates/gfx_64/src/resource/texture/: mod.rs
crates/gfx_64/src/resource/window/: mod.rs
crates/gui_64/: CHANGELOG.md  Cargo.toml
crates/gui_64/src/: lib.rs
crates/gui_64/src/font/: mod.rs
crates/gui_64/src/text/: mod.rs
crates/log_64/: CHANGELOG.md  Cargo.toml
crates/log_64/src/: lib.rs
crates/math_64/: Cargo.toml
crates/math_64/src/: lib.rs
crates/mem_64/: CHANGELOG.md  Cargo.toml
crates/mem_64/src/: lib.rs
crates/mem_64/src/vec/: mod.rs
crates/sdl_64/: CHANGELOG.md  Cargo.toml  build.rs
crates/sdl_64/src/: lib.rs
crates/sdl_64/src/event/: mod.rs
crates/sdl_64/src/window/: mod.rs
examples/: curves.rs  triangle.rs
examples/curves/: Cargo.toml  build.rs  main.rs
examples/min_triangle/: Cargo.toml  main.rs
gfx_64/: Cargo.toml  build.rs
gfx_64/src/: lib.rs
gfx_64/src/resource/: mod.rs
gfx_64/src/resource/buffer/: mod.rs
gfx_64/src/resource/framebuffer/: mod.rs
gfx_64/src/resource/mesh/: mod.rs  vertex.rs
gfx_64/src/resource/pipeline/: mod.rs
gfx_64/src/resource/shader/: mod.rs
gfx_64/src/resource/shader/defaults/: pos2d_rgb.vert
gfx_64/src/resource/texture/: mod.rs
gui_64/: Cargo.toml
gui_64/src/text/: mod.rs
gui_64/src/text/font/: mod.rs
gui_64/src/text/shaders/: text.frag
sdl_64/: Cargo.toml
sdl_64/src/event/: mod.rs
sdl_64/src/window/: mod.rs
src/: lib.rs  main.rs
src/assets/: mod.rs
src/data/: list.rs  mod.rs  page.rs
src/event/: mod.rs
src/math/: mod.rs
src/render/: buffer.rs  mesh.rs  mod.rs  program.rs  shader.rs  vertex.rs
src/render/mesh/: mod.rs  vertex.rs
src/render/program/: mod.rs  shader.rs
src/shaders/: pos.vert
src/sys/: mod.rs
src/window/: mod.rs
underscore_64/: Cargo.toml
underscore_64/examples/: curves.rs  triangle.rs
underscore_64/src/: lib.rs
underscore_64/src/assets/: mod.rs
underscore_64/src/assets/shaders/: pos2d.vert  pos3d_rgb.vert  rgb.frag  white.frag
underscore_64/src/data/: mod.rs
underscore_64/src/event/: mod.rs
underscore_64/src/math/: mod.rs
underscore_64/src/parse/: mod.rs
underscore_64/src/render/: buffer.rs  mod.rs
underscore_64/src/render/buffer/: mod.rs
underscore_64/src/render/framebuffer/: mod.rs
underscore_64/src/render/mesh/: mod.rs
underscore_64/src/render/shaders/: pos2d_tex2d.vert
underscore_64/src/render/texture/: mod.rs
underscore_64/src/render/window/: mod.rs
underscore_64/src/ttf/: mod.rs
underscore_64/src/window/: mod.rs
underscore_64/underscore_sys/: Cargo.toml  build.rs
underscore_64/underscore_sys/src/: bindings.h
underscore_core/: Cargo.toml
underscore_core/src/: lib.rs
underscore_core/src/alloc/: mod.rs
underscore_core/src/alloc/vec/: mod.rs
underscore_core/src/math/: mod.rs
underscore_gfx/: Cargo.toml
underscore_gfx/src/: lib.rs
underscore_gfx/src/framebuffer/: mod.rs
underscore_gfx/src/program/: mod.rs  shader.rs
underscore_gfx/src/resource/: mod.rs
underscore_gfx/src/texture/: mod.rs
underscore_gfx/src/window/: mod.rs
underscore_gui/: Cargo.toml
underscore_gui/src/: lib.rs
underscore_gui/src/font/: mod.rs
underscore_gui/src/render/: mod.rs
underscore_gui/src/text/: mod.rs
underscore_gui/src/tty/: mod.rs
underscore_sdl/: Cargo.toml  build.rs
underscore_sdl/src/: lib.rs
underscore_sdl/src/event/: mod.rs
underscore_sdl/src/window/: mod.rs
underscore_sys/: Cargo.toml  build.rs
underscore_sys/src/: lib.rs
underscore_sys/src/window/: mod.rs
underscore_txt/: Cargo.toml
underscore_txt/src/: lib.rs
underscore_txt/src/glyph/: mod.rs
underscore_txt/src/text/: mod.rs
(+17 files in other folders)
