[package]
name = "underscore_64"
description = "A minsize-oriented graphics engine"
version = "0.1.0"
license = "MIT"
authors = ["Zeno <zeno@sevencubed.tech>"]
edition = "2018"

[[bin]]
name = "_64"
path = "src/main.rs"

[workspace]
members = ["crates/gui_64", "crates/gfx_64", "crates/base_64", "crates/sdl_64"]

[dependencies]
base_64 = "^0.1.0"
gfx_64 = "^0.1.0"
gui_64 = "^0.1.0"
sdl_64 = "^0.1.0"
log = { version = "^0.4", optional = true, default-features = false }

[patch.crates-io]
base_64 = { path = "crates/base_64" }
gfx_64 = { path = "crates/gfx_64" }
gui_64 = { path = "crates/gui_64" }
sdl_64 = { path = "crates/sdl_64" }

[build-dependencies]
ttf-parser = { version = "^0.15", optional = true, default-features = true }

[features]
edit = ["std", "log", "ttf-parser"]
log = ["dep:log"]
alloc = ["base_64/alloc"]
std = ["alloc"]

[profile.release]
panic = "abort"
lto = true
incremental = true
opt-level = "z"

[profile.dev]
panic = "abort"
incremental = true
