[package]
name = "gfx_64"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base_64 = "^0.1.0"
sdl_64 = "^0.1.0"
log = {version = "^0.4", default-features = false }

[build-dependencies]
gl_generator = { version = "^0.14", path = "gl_64/gl_generator" }
