[package]
name = "underscore_core"
description = "A minsize graphics library"
version = "0.1.0"
license = "MIT"
authors = ["Zeno <zeno@sevencubed.tech>"]
edition = "2018"

[dependencies]
underscore_sys = "^0.1.1"
log = {version = "^0.4", default-features = false }

[features]
default_vec = []
default_alloc = []
