[package]
name = "gfx_64"
description = "Geometry is not true, it is advantageous. -Henri Poincaré"
version = "0.1.0"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log_64 = "^0.1.0"
math_64 = "^0.1.0"

[build-dependencies]
bindgen = {version = "0.60", default-features = false }
