[package]
name = "sdl_64"
description = "A window to the past..."
license = "MIT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gfx_64 = "^0.1.0"
log_64 = "^0.1.0"

[build-dependencies]
bindgen = {version = "0.60", default-features = false }
